Implementing field to store old status